// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dkzDqf dcWZiJ"
>
  <div
    className="sc-eCYdqJ dhKJLM"
  >
    <span
      className="sc-jSMfEi"
    >
      0
    </span>
    <span
      className="sc-gKXOVf iclgcW"
    >
      42
    </span>
  </div>
  <button
    className="sc-bczRLJ sc-gsnTZi exPOae eVzcKy"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dkzDqf dcWZiJ"
>
  <div
    className="sc-hKMtZM hRXysP"
  >
    🛌🛌
  </div>
  <button
    className="sc-bczRLJ sc-gsnTZi fSpoJh eVzcKy"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dkzDqf dcWZiJ"
>
  <div
    className="sc-hKMtZM hRXysP"
  >
    🍅
  </div>
  <button
    className="sc-bczRLJ sc-gsnTZi fSpoJh eVzcKy"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dkzDqf dcWZiJ"
>
  <div
    className="sc-hKMtZM hRXysP"
  >
    🛌
  </div>
  <button
    className="sc-bczRLJ sc-gsnTZi fSpoJh eVzcKy"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
